# work-right-uae-dpo

./: .gitignore  dpo-test.ipynb  main.ipynb  main.py  pyproject.toml
data/: rag-data.csv
data-gen/question/: data-prep.ipynb  generate_persona.py  persona_prompt.md  question-gen.py  question_gen_general_prompt.md  question_gen_persona_prompt.md
data-gen/question/data/: doc_data.csv  doc_with_persona.csv  questions.csv
prototype/: agent.py  langgraph.json  prompt-2.md  prompt.md  questions.md  tool_call_test.py  tools.py
prototype/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
