[project]
name = "work-right-uae-dpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "unsloth>=2025.9.1",
    "chromadb>=1.0.20",
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai-like>=0.4.0",
    "llama-index-vector-stores-chroma>=0.4.2",
    "pymupdf>=1.26.3",
    "langchain>=0.3.27",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-pinecone>=0.2.11",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.5",
    "langgraph-cli[inmem]>=0.3.8",
]
